--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
 	<head>
-		<title> Welcome to this Example </title>
+		<title> Welcome to NEARBPO </title>
 	</head>
 	<body>
 		<h1>It works</h1>
 		<br>
-		<br>TEST NEARBPO
+		<br>Welcome to NEARBPO
 	</body>
 </html>
